<resources>
    <string name="app_name">RecipesChef</string>
    <string name="app_logo">AppLogo</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>

    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="confirmPassText">Confirm Password</string>
    <string name="emailText">Email</string>
    <string name="recipe_name">name</string>
    <string name="recipe_description">description</string>
    <string name="recipe_difficulty">difficulty</string>
    <string name="recipe_time">time</string>
    <string name="recipe_serve">serve</string>
    <string name="recipe_ingredient">ingredient</string>
    <string name="recipe_instruction">instruction</string>
    <string name="recipe_category">category</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="head_signup">Sign up</string>

    <string name="activity_home">Home</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_recipes">Recipes</string>
    <string name="fragment_logout">Logout</string>
    <string name="fragment_editprofile">Edit Profile</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>


    // TODO: Delete this shit in product version
    <string name="button_bypass">Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
