<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/activity_home"/>

        <item android:id="@+id/recipe"
            android:icon="@drawable/bookmark"
            android:title="@string/fragment_recipes"/>

        <item android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/fragment_search"/>

        <item android:id="@+id/profile"
            android:icon="@drawable/avatar"
            android:title="@string/fragment_profile"/>

        <item android:id="@+id/logout"
            android:title="@string/fragment_logout"/>
    </group>
</menu>